--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Sokka Prowess Tracker
-description: Legal documents and privacy policy for the Sokka Prowess Tracker app
+title: Prowess Tracker
+description: Legal documents and privacy policy for the Prowess Tracker app
 theme: jekyll-theme-minimal
